# pyhaul

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PYPI_README.md  README.md  SECURITY.md  WHY.md  justfile  properdocs.yml  pyproject.toml  renovate.json  zizmor.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  codeql.yml  dependency-submission.yml  docs.yml  nightly.yml  pr-title.yml  release.yml  renovate.yml
.scratch/: hynek-patterns.md
.semantic-release/templates/.components/: versioned_changes.md.j2
docs/: DESIGN.md  PYPI_README.md  SPEC.md  WHY.md  contributing.md  index.md  quickstart.md
docs/explanation/: design.md  why.md
docs/guides/: adapters.md  async.md  bulk-downloads.md  custom-transport.md  retry.md
docs/reference/: api.md  changelog.md  cli.md  exceptions.md  headers.md  spec.md
docs/stylesheets/: extra.css
examples/: example_httpx_async.py  example_httpx_sync.py
src/pyhaul/: __init__.py  __main__.py  _engine_common.py  _probe_common.py  _session_dispatch.py  _types.py  _version.py  alloc.py  async_engine.py  async_probe.py  checkpoint.py  cli.py  content_range.py  engine.py  etag.py  fs.py  headers.py  persist.py  probe.py
src/pyhaul/transport/: __init__.py  _headers.py  _http_common.py  _requests_like_error_map.py  aiohttp_adapter.py  errors.py  httpx_adapter.py  niquests_adapter.py  protocols.py  proxy_transport_session.py  requests_adapter.py  types.py  urllib3_adapter.py
tests/: conftest.py  live_backends.py  redirect_support.py  test_aiohttp_adapter.py  test_alloc.py  test_async_engine.py  test_cli.py  test_content_range.py  test_engine.py  test_etag.py  test_fs.py  test_handle_response_redirect.py  test_headers.py  test_headers_logic.py  test_httpx_adapter.py  test_integrity_validation.py  test_live_async.py  test_live_sha_parity.py  test_live_torture.py  test_main.py  test_parse_content_length.py  test_persist.py  test_probe.py  test_proxy_transport_session.py  test_pypi_readme.py  test_redirect_live_matrix.py  test_requests_adapter.py  test_session_dispatch.py  test_transport_types.py  test_types.py  test_urllib3_adapter.py  test_version.py
